resources/tests/type_checker_tests/EndsInState.obs
main contract C {
    // error: constructor for 'C' ends in S1 instead of S2
    C@S2() {
        ->S1;
    }

    // error: t ends in S2 instead of S1
    transaction t(C@S2 >> S1 this) {
        int x = 1;
    }


    state S1 {}
    state S2 {}
}